# rocket_sql_example

./: Cargo.toml  README.md  Rocket.toml
migrations/03_create_posts/: down.sql  up.sql
migrations/04_create_posts/: down.sql  up.sql
src/: apples.rs  bikes.rs  db.rs  main.rs  models.rs  posts.rs  schema.rs
